--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ serde = { version = "1.0.210", features = ["derive"] }
 env_logger = "0.11.5"
 log = "0.4.22"
 serde_json = "1.0.128"
+tokio = { version = "1.40.0" }
 
 [dev-dependencies]
 actix-rt = "2"
