--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ env_logger = "0.11.5"
 log = "0.4.22"
 serde_json = "1.0.128"
 tokio = { version = "1.40.0" }
+actix-service = "2.0.2"
+futures-util = "0.3.31"
+dotenv = "0.15.0"
 
 [dev-dependencies]
 actix-rt = "2"
