--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ tokio = { version = "1.40.0" }
 actix-service = "2.0.2"
 futures-util = "0.3.31"
 dotenv = "0.15.0"
+aws-config = "0.0.26-alpha"
+aws-sdk-dynamodb = "0.0.26-alpha"
 
 [dev-dependencies]
 actix-rt = "2"
